<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/LayoutBackground" >

    <RelativeLayout
        style="?attr/LayoutMarginBig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/mediumGreyText"
                    android:text="@string/me_pointer" />

                <EditText
                    android:id="@+id/st_et_human"
                    style="@style/mediumBlackEditText"
                    android:hint="@string/please_type_in_the_word" />
            </LinearLayout>

            <Button
                android:id="@+id/st_bt_ok"
                style="?attr/bigButtonStyle1"
                android:layout_marginTop="20dp"
                android:text="@string/ok" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal" >

                <TextView
                    style="@style/mediumGreyText"
                    android:text="@string/robot_pointer" />

                <TextView
                    android:id="@+id/st_tv_robot"
                    style="@style/mediumBlackText"
                    android:layout_width="match_parent"
                    android:text="" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/st_bt_restart"
                    style="?attr/smallButtonStyle1"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:text="@string/restart" />

                <Button
                    android:id="@+id/st_bt_figure"
                    style="?attr/smallButtonStyle2"
                    android:layout_width="0dp"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="0.5"
                    android:text="@string/query" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/st_bt_hint"
                    style="?attr/smallButtonStyle2"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:text="@string/hint" />

                <Button
                    android:id="@+id/st_bt_log"
                    style="?attr/smallButtonStyle3"
                    android:layout_width="0dp"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="0.5"
                    android:text="@string/log" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>