<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/me_pointer"
            android:textColor="#00d2ff"
            android:textSize="22dp" />

        <EditText
            android:id="@+id/ch_et_human"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_type_in_the_word"
            android:singleLine="true"
            android:textSize="22dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ch_bt_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.5"
            android:text="@string/ok" />

        <TextView
            android:id="@+id/ch_tv_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0.5"
            android:alpha="0.8"
            android:gravity="right"
            android:text=""
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/robot_pointer"
            android:textColor="#e33c3c"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/ch_tv_robot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="22dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="35dp" >

        <ProgressBar
            android:id="@+id/ch_pb_charged"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1000" />

        <TextView
            android:id="@+id/ch_tv_charged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#00d2ff"
            android:textSize="15dp" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/ch_tv_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text=""
        android:textSize="20dp" />

    <TextView
        android:id="@+id/ch_tv_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text=""
        android:textSize="20dp" />

    <TextView
        android:id="@+id/ch_tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text=""
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ch_bt_restart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/restart"
            android:textSize="18dp" />

        <Button
            android:id="@+id/ch_bt_exit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="0.5"
            android:text="退出模式"
            android:textSize="18dp" />
    </LinearLayout>

</LinearLayout>